# Indie

./: .gitignore  CMakeLists.txt
.github/workflows/: CI.yml  cmake.yml
assets/model/: player1.mtl
include/: Bomberman.hpp  Client.hpp  Option.hpp  proto.hpp  struct.hpp
include/entities/: Block.hpp  Bombe.hpp  Enemies.hpp  Entity.hpp  Explosion.hpp  Player.hpp  Powder.hpp
include/entities/bonus/: Bonus.hpp  Capacity.hpp  Ghost.hpp  Power.hpp  Speed.hpp
include/interface/: Interface.hpp
include/server/: ClientServer.hpp  Game.hpp  Server.hpp
src/: Bomberman.cpp  Option.cpp  main.cpp  serialize.cpp
src/animation/: Explosion.cpp
src/entities/: Block.cpp  Bombe.cpp  Enemies.cpp  Entity.cpp  Player.cpp  Powder.cpp
src/interface/: Interface.cpp
src/map/: generator.cpp
src/server/: Client.cpp  ClientServer.cpp  Game.cpp  Server.cpp
