project(bomberman)
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
FIND_PACKAGE(raylib REQUIRED)

add_compile_options(-g3)
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")
include_directories(include)
ADD_EXECUTABLE(bomberman ${SOURCES})
TARGET_LINK_LIBRARIES(bomberman raylib)
